--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-</html>
-dasdasdasasdasdsdasdas
+</html>asdasd
+dasdasdasasdasdsdasdasadadas
